# Indian-Energy-Market-AI

./: .gitignore  AI-Powered Market Prediction.docx  README.md  STATUS.md  requirements.txt  start.sh
backend/: main.py  pyproject.toml  uv.toml
backend/approval_service/: agent.py  router.py
backend/audit_service/: router.py
backend/beckn_service/: __init__.py  mock_bpp.py  router.py  schemas.py
backend/bid_engine_service/: optimizer.py  router.py
backend/common/: config.py  database.py  dsm_policy.py  models.py  schemas.py  solver_config.py
backend/data/: enrich_pipeline.py  scrape_iex.py  scrape_tam.py  scrape_weather.py
backend/data/policies/: active_policy.txt  cerc_dsm_2019.yaml  cerc_dsm_2024_draft.yaml
backend/forecast_service/: model.py  router.py
backend/jobs/: scheduler.py
backend/policy_service/: router.py
backend/risk_service/: engine.py  router.py
backend/scraper_service/: router.py
deploy/: backend.service  deploy.sh  frontend.service  nginx.conf  requirements-deploy.txt
docs/: FEATURES.md  STATUS.md
frontend/: package-lock.json  package.json  tsconfig.tsbuildinfo
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/analysis/: page.tsx
frontend/src/app/backtest/: page.tsx
frontend/src/app/beckn/: page.tsx
frontend/src/app/bids/: page.tsx
frontend/src/app/forecast/: page.tsx
frontend/src/app/policy/: page.tsx
frontend/src/app/risk/: page.tsx
frontend/src/app/sync/: page.tsx
frontend/src/app/workspace/: page.tsx
frontend/src/components/: Sidebar.tsx
frontend/src/lib/: api.ts  utils.ts
