[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiosqlite>=0.22.1",
    "fastapi>=0.135.3",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "pulp>=3.3.0",
    "requests>=2.33.1",
    "scikit-learn>=1.8.0",
    "sqlalchemy>=2.0.49",
    "uvicorn[standard]>=0.43.0",
]
